# ads126x-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: linux.rs
src/: commands.rs  crc8.rs  lib.rs  registers.rs
src/device/: ads1262.rs  ads1263.rs  mod.rs
